# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./batteries";
 export * from "./banners";
 export * from "./popups";
+export * from "./vehicleCompatibility";
